--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Aditya Saxena UI Developer</title>
 		<meta charset="UTF-8" />
+		<link  href="https://fonts.googleapis.com">
+<link  href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <script src="src/index.js"></script>
   </head>
 
