--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 					<h1 class="designation">
 						Senior UI Developer &nbsp
 					</h1>
+					<a target="blank" href="https://www.thoughtworks.com/">
 					<h2 class="company">
 						at Thoughtworks
 					</h2>
+				</a>
 				</div>
 				<div class="location-wrapper">
 					<i class="fas fa-map-marker-alt"></i>
