more changes to compony hyperlink

--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
 					<h1 class="designation">
 						Senior UI Developer &nbsp
 					</h1>
-					<a target="blank" href="https://www.thoughtworks.com/">
 					<h2 class="company">
-						at Thoughtworks
+						at&nbsp;
+					</h2>
+					<a target="blank" href="https://www.thoughtworks.com/">
+					<h2 class="company link">
+						Thoughtworks
 					</h2>
 				</a>
 				</div>
