some styling and content change

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8" />
 		<link  href="https://fonts.googleapis.com">
 <link  href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap&family=Ubuntu" rel="stylesheet">
     <script src="src/index.js"></script>
   </head>
 
@@ -38,10 +38,10 @@
 				</div>
 				<main>
 		
-					<p>Started my journey from core java and ended up in love with JavaScript.
-						I am an UX focused Web Developer having worked on various UI techs, delivered smooth and performant web and mobile apps.</p>
+					<p>I am an UX focused UI/Web Developer who cares about responsive fluid design, performance and yes accessibility too.
+						</p>
 						</br>
-					<p> And yeah I love animating stuffs.</p>
+					<p> My free time is spent creating animations and inspecting how and why of some cool web/mobile apps.</p>
 					<div class="image-wrapper">
 						<img alt="profile image" src="https://media-exp1.licdn.com/dms/image/C4E03AQGSRv6Ev0FVNg/profile-displayphoto-shrink_800_800/0/1594952634868?e=1630540800&v=beta&t=io79pIzY6fdGl10AR9k_IUp6TbzO_n3O0gD7akjQL2Y" />
 					</div>
