Updated header content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			<div class="card">
 				<div class="wrapper">
 					<h2 class="greeting">Hello, I am &nbsp</h2>
-					<h2 class="company">Aditya</h2>
+					<h2 class="company">Aditya Saxena</h2>
 				</div>
 				<div class="designation-wrapper">
 					<h1 class="designation">
-						Senior UI Developer &nbsp
+					Frontend Developer &nbsp
 					</h1>
 					<h2 class="company">
 						at&nbsp;
@@ -38,7 +38,7 @@
 				</div>
 				<main>
 		
-					<p>I am an UX focused UI/Web Developer who cares about responsive fluid design, performance and yes accessibility too.
+					<p>I am an UX focused frontend Developer who cares about responsive fluid design, performance and yes accessibility too.
 						</p>
 						</br>
 					<p> My free time is spent creating animations and inspecting how and why of some cool web/mobile apps.</p>
