Added gitignore, updated image url

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 						</br>
 					<p> My free time is spent creating animations and inspecting how and why of some cool web/mobile apps.</p>
 					<div class="image-wrapper">
-						<img alt="profile image" src="https://media-exp1.licdn.com/dms/image/C4E03AQGSRv6Ev0FVNg/profile-displayphoto-shrink_800_800/0/1594952634868?e=1630540800&v=beta&t=io79pIzY6fdGl10AR9k_IUp6TbzO_n3O0gD7akjQL2Y" />
+						<img alt="profile image"
+							src="https://media-exp2.licdn.com/dms/image/C4E03AQGSRv6Ev0FVNg/profile-displayphoto-shrink_400_400/0/1594952634868?e=1662595200&v=beta&t=0zrn7bJgH6z_ayEeW_rme7Gl3IGs3zK2M3V4tOKf1o0" />
 					</div>
 				</main>
 				<footer>
